# Sentiment-Analysis

./: README.md
review_sentiment_analysis/: CONTRIBUTING.rst  LICENSE  Makefile  README.MD  README.rst  environment.yml  pyproject.toml  requirements_dev.txt  tox.ini
review_sentiment_analysis/.github/: ISSUE_TEMPLATE.md
review_sentiment_analysis/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
review_sentiment_analysis/src/src/: __init__.py  app.py
