[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "review_sentiment_analysis"
version = "0.1.0"
description = "Built a Review Sentiment Analysis project to classify customer reviews as positive, negative, or neutral and compare two different modal VEDAR and RoBerta"
readme = "README.rst"
authors = [
  {name = "Faraz Ahmad", email = "farazahmadiimt7836@gmail.com"}
]
maintainers = [
  {name = "Faraz Ahmad", email = "farazahmadiimt7836@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Faraz7836/review_sentiment_analysis/issues"
changelog = "https://github.com/Faraz7836/review_sentiment_analysis/blob/master/changelog.md"
homepage = "https://github.com/Faraz7836/review_sentiment_analysis"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

